code25_all/scala/7585959.txt
Welcome to Scala version 2.9.1.final (Java HotSpot(TM) Server VM, Java 1.6.0_24).
Type in expressions to have them evaluated.
Type :help for more information.

scala> val a=7
a: Int = 7

scala> a.toString2
<console>:9: error: value toString2 is not a member of Int
              a.toString2
                ^

scala> a2.toString
<console>:8: error: not found: value a2
              a2.toString
              ^

scala> a.toString.length3
<console>:9: error: value length3 is not a member of java.lang.String
              a.toString.length3
                         ^

